private routes, basic ui for admins, nested routes for admins, handling 404, dashboard setup

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
   <body>
     <div id="root"></div>
     <script src="./index.js"></script>
+    <script
+      src="https://kit.fontawesome.com/d7af18368d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
